--- a/examples/testapp/packages/com.nokia.testapp.subcomponent.alwaysvisible/meta/package.xml
+++ b/examples/testapp/packages/com.nokia.testapp.subcomponent.alwaysvisible/meta/package.xml
@@ -4,4 +4,5 @@
     <Version>1</Version>
     <ReleaseDate>2009-12-03</ReleaseDate>
     <Name>com.nokia.testapp.subcomponent.alwaysvisible</Name>
+    <Default>true</Default>
 </Package>
