--- a/examples/testapp/packages/com.nokia.testapp/meta/package.xml
+++ b/examples/testapp/packages/com.nokia.testapp/meta/package.xml
@@ -2,7 +2,7 @@
 <Package>
     <DisplayName>Test App</DisplayName>
     <Description>Installs the complete Nokia SDK.</Description>
-    <Version>1</Version>
+    <Version inheritVersionFrom="com.nokia.testapp.subcomponent.alwaysvisible">1</Version>
     <ReleaseDate>2009-12-03</ReleaseDate>
     <Name>com.nokia.testapp</Name>
     <Script>installscript.js</Script>
