Update the tutorial.
- adjust config.xml
- add install script file
- fix license file location

Change-Id: Ie6f046f8cb8a7623915b11958fb7cce6082b5617
Reviewed-by: Niels Weber <niels.2.weber@nokia.com>

--- a/examples/tutorial/packages/com.vendor.product/meta/package.xml
+++ b/examples/tutorial/packages/com.vendor.product/meta/package.xml
@@ -1,8 +1,12 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package>
     <DisplayName>The root component</DisplayName>
     <Description>Install this example.</Description>
     <Version>0.1.0-1</Version>
     <ReleaseDate>2010-09-21</ReleaseDate>
     <Name>com.vendor.product</Name>
+    <Licenses>
+        <License name="Beer Public License Agreement" file="license.txt" />
+    </Licenses>
+    <Script>installscript.qs</Script>
 </Package>
