Update the tutorial to use the script.
Change-Id: I9cd1ae6107b25500074a389ad4800e3b5e8eb54b
Reviewed-by: Niels Weber <niels.2.weber@nokia.com>

--- a/examples/tutorial/packages/com.vendor.product/meta/package.xml
+++ b/examples/tutorial/packages/com.vendor.product/meta/package.xml
@@ -8,5 +8,6 @@
     <Licenses>
         <License name="Beer Public License Agreement" file="license.txt" />
     </Licenses>
+    <Default>script</Default>
     <Script>installscript.qs</Script>
 </Package>
