add German translation stub to tutorial example
Change-Id: I6b77e1ffef4d02d5f5dc24a6714a3ad573aa0b67
Reviewed-by: Tim Jenssen <tim.jenssen@nokia.com>

--- a/examples/tutorial/packages/com.vendor.product/meta/package.xml
+++ b/examples/tutorial/packages/com.vendor.product/meta/package.xml
@@ -8,6 +8,9 @@
     <Licenses>
         <License name="Beer Public License Agreement" file="license.txt" />
     </Licenses>
+    <Translations>
+        <Translation>de_de.qm</Translation>
+    </Translations>
     <Default>script</Default>
     <Script>installscript.qs</Script>
 </Package>
