Document localization of package.xml description.
Change-Id: I73c0f338433f8c571057760765d0388dcf062350
Reviewed-by: Karsten Heimrich <karsten.heimrich@nokia.com>

--- a/doc/examples/package.xml
+++ b/doc/examples/package.xml
@@ -2,6 +2,7 @@
 <Package>
     <DisplayName>QtGui</DisplayName>
     <Description>Qt gui libraries</Description>
+    <Description xml:lang="de_de">Qt GUI Bibliotheken</Description>
     <Version>1.2.3</Version>
     <ReleaseDate>2009-04-23</ReleaseDate>
     <Name>com.vendor.root.component2</Name>
