--- a/src/sdk/installerbase.rc
+++ b/src/sdk/installerbase.rc
@@ -4,4 +4,4 @@ IDI_ICON1	ICON	DISCARDABLE
 #define RT_MANIFEST 24
 #define CREATEPROCESS_MANIFEST_RESOURCE_ID 1
 
-CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "installerbase.exe.manifest"
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "installerbase.manifest"
