Provide an API to get all wizard pages from java script.
Task-number: QTIFW-477

Change-Id: Ic83df19d20ce310e3e295de929020182e1878273
Reviewed-by: Niels Weber <niels.weber@digia.com>

--- a/examples/tutorial/packages/com.vendor.product/meta/package.xml
+++ b/examples/tutorial/packages/com.vendor.product/meta/package.xml
@@ -13,4 +13,7 @@
     </Translations>
     <Default>script</Default>
     <Script>installscript.qs</Script>
+    <UserInterfaces>
+        <UserInterface>page.ui</UserInterface>
+    </UserInterfaces>
 </Package>
