Doc: add docs for Change UI Example
Describe the example files.
Add example file extensions to the qdocconf file to
have all files listed on the doc page.
Fix capitalization in the configuration file.
Use more descriptive values for the component in the
package information file. Rearrange sections to be able
to use an include file for documenting all package
information files.
Add more detailed information about creating the installer.
Add image.

Change-Id: I64ffff29d08f1dff4cd92c3b796f1a0e6c2fb280
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

--- a/examples/changeuserinterface/packages/org.qtproject.ifw.example.changeuserinterface/meta/package.xml
+++ b/examples/changeuserinterface/packages/org.qtproject.ifw.example.changeuserinterface/meta/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>Change UI example</DisplayName>
-    <Description>Change license accept/reject labels text</Description>
-    <ReleaseDate>2013-01-01</ReleaseDate>
+    <DisplayName>Dummy Component</DisplayName>
+    <Description>This example does not install any components. It demonstrates
+    modifying the text on the next page.</Description>
     <Version>1.0.0-1</Version>
+    <ReleaseDate>2013-01-01</ReleaseDate>
     <Script>installscript.qs</Script>
     <Licenses>
         <License name="Beer Public License Agreement" file="license.txt" />
