Doc: add docs for Component Error example
Document the example.
Edit text in the example files.
Add a screenshot.

Change-Id: Ib5c3e0d78006d81ec77c75c92b7636f358e83412
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

--- a/examples/componenterror/packages/root.component1/meta/package.xml
+++ b/examples/componenterror/packages/root.component1/meta/package.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <Package>
-    <DisplayName>component1</DisplayName>
+    <DisplayName>Component 1</DisplayName>
+    <Description>This component contains an error that prevents it from being
+    installed.</Description>
     <Version>1.0.1</Version>
     <ReleaseDate>2013-08-21</ReleaseDate>
     <Script>installscript.js</Script>
