--- a/examples/componenterror/packages/root.component2/meta/package.xml
+++ b/examples/componenterror/packages/root.component2/meta/package.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <Package>
-    <DisplayName>component2</DisplayName>
+    <DisplayName>Component 2</DisplayName>
+    <Description>This component contains an error that prevents it from being
+                 installed.</Description>
     <Version>1.0.1</Version>
     <ReleaseDate>2013-08-21</ReleaseDate>
     <Script>installscript.js</Script>
