--- a/examples/componenterror/packages/root/meta/package.xml
+++ b/examples/componenterror/packages/root/meta/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <Package>
-    <DisplayName>ROOT</DisplayName>
+    <DisplayName>Root Component</DisplayName>
+    <Description>This component handles the errors in the other components.</Description>
     <Version>1.0.1</Version>
     <ReleaseDate>2013-08-21</ReleaseDate>
     <Script>installscript.js</Script>
