Select by default components in examples
Change-Id: I884b6ff2055ecf9505b0fd4dd75fe9a56b69e6ff
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/examples/changeuserinterface/packages/org.qtproject.ifw.example.changeuserinterface/meta/package.xml
+++ b/examples/changeuserinterface/packages/org.qtproject.ifw.example.changeuserinterface/meta/package.xml
@@ -5,6 +5,7 @@
     modifying the text on the next page.</Description>
     <Version>1.0.0-1</Version>
     <ReleaseDate>2013-01-01</ReleaseDate>
+    <Default>true</Default>
     <Script>installscript.qs</Script>
     <Licenses>
         <License name="Beer Public License Agreement" file="license.txt" />
