--- a/examples/quit_installer/packages/org.qtproject.ifw.example.quitinstaller/meta/package.xml
+++ b/examples/quit_installer/packages/org.qtproject.ifw.example.quitinstaller/meta/package.xml
@@ -4,5 +4,6 @@
     <Description>Quits the installer in a nice way, if there is something missing</Description>
     <Version>1.0.1</Version>
     <ReleaseDate>2013-02-27</ReleaseDate>
+    <Default>true</Default>
     <Script>installscript.js</Script>
 </Package>
