--- a/examples/startmenu/packages/org.qtproject.ifw.example/meta/package.xml
+++ b/examples/startmenu/packages/org.qtproject.ifw.example/meta/package.xml
@@ -3,7 +3,8 @@
     <Name>org.qtproject.ifw.example</Name>
     <DisplayName>README.txt</DisplayName>
     <Description>A README.txt, accessible through a start menu entry.</Description>
-    <ReleaseDate>2013-01-01</ReleaseDate>
     <Version>1.0.0-1</Version>
+    <ReleaseDate>2013-01-01</ReleaseDate>
+    <Default>true</Default>
     <Script>installscript.qs</Script>
 </Package>
