--- a/examples/licenseagreement/packages/org.qtproject.ifw.example.licenseagreement/meta/package.xml
+++ b/examples/licenseagreement/packages/org.qtproject.ifw.example.licenseagreement/meta/package.xml
@@ -4,6 +4,7 @@
     <Description>README can only be installed if the user agrees to the licenses.</Description>
     <ReleaseDate>2014-01-01</ReleaseDate>
     <Version>1.0.0-1</Version>
+    <Default>true</Default>
     <Licenses>
         <License name="Creative Commons (CC0 1.0)" file="cc0.txt"/>
         <License name="GNU GENERAL PUBLIC LICENSE Version 3" file="gpl3.txt"/>
