--- a/examples/modifyextract/packages/org.qtproject.ifw.example.modifyextract/meta/package.xml
+++ b/examples/modifyextract/packages/org.qtproject.ifw.example.modifyextract/meta/package.xml
@@ -4,5 +4,6 @@
     <Description>A component that uses a hook to modify the extract operation.</Description>
     <Version>1.0.1</Version>
     <ReleaseDate>2013-02-27</ReleaseDate>
+    <Default>true</Default>
     <Script>installscript.js</Script>
 </Package>
