Doc: update docs for Modify Extract Installer example
Fix issues in the example files and unify some values to
make it possible to use standard text for the configuring
section.

Change-Id: I4e4236d519d075fc1f0461e3b863989ca0373cd3
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/examples/modifyextract/packages/org.qtproject.ifw.example.modifyextract/meta/package.xml
+++ b/examples/modifyextract/packages/org.qtproject.ifw.example.modifyextract/meta/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <Package>
-    <DisplayName>modify extract operation</DisplayName>
+    <DisplayName>Modify extract operation</DisplayName>
     <Description>A component that uses a hook to modify the extract operation.</Description>
     <Version>1.0.1</Version>
-    <ReleaseDate>2013-02-27</ReleaseDate>
+    <ReleaseDate>2014-12-19</ReleaseDate>
     <Default>true</Default>
     <Script>installscript.js</Script>
 </Package>
