Doc: update the Register File Extension example
And the docs.

Change-Id: I35f5edc1ad95df29d033e4220af003bac480d6e3
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/examples/registerfileextension/packages/org.qtproject.ifw.example.registerfileextension/meta/package.xml
+++ b/examples/registerfileextension/packages/org.qtproject.ifw.example.registerfileextension/meta/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>register a file extension</DisplayName>
-    <Description>Register a random generated file extension to open with notepad.exe</Description>
+    <DisplayName>Register a file extension</DisplayName>
+    <Description>Register a randomly generated file extension to open with notepad.exe</Description>
     <Version>1.0.0-1</Version>
     <ReleaseDate>2013-01-01</ReleaseDate>
     <Default>true</Default>
     <Script>installscript.qs</Script>
     <UserInterfaces>
-        <UserInterface>registerfilecheckboxesform.ui</UserInterface>
-        <UserInterface>openfilecheckboxesform.ui</UserInterface>
+        <UserInterface>registerfilecheckboxform.ui</UserInterface>
+        <UserInterface>openfilecheckboxform.ui</UserInterface>
     </UserInterfaces>
 </Package>
