Add possibility to move component in component tree
Setting <TreeName> -tag to component.xml will overwrite the default location
of component in installer's tree view. This way we can define the component
location without a complete repo build. Updates.xml can be directly modified
by adding <TreeName> -tag for easy relocation of components. TreeName must be
an unique name - it cannot conflict with existing tree name or name.

Task-number: QTIFW-594
Change-Id: Ie69f90f1303d932369d566d0d7b4bc0e354505c6
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/doc/examples/package.xml
+++ b/doc/examples/package.xml
@@ -42,4 +42,5 @@
             <Argument>@TargetDir@/Folder2</Argument>
         </Operation>
     </Operations>
+    <TreeName>com.vendor.subcomponent</TreeName>
 </Package>
