EO-10244  - Added build scripts to build the framework locally  - Added gitignore rules to skip files we don't care about

--- a/.gitignore
+++ b/.gitignore
@@ -88,5 +88,25 @@ doc-build
 .rcc
 .pch
 .metadata
+build
 
 /src/sdk/translations/untranslated.ts
+
+# Build files that we don't care about
+.qmake.stash
+src/libs/7zip/mocinclude.opt
+src/libs/installer/mocinclude.opt
+src/sdk/installerbase.qrc
+src/sdk/mocinclude.opt
+src/sdk/translations/ifw_en.ts
+tools/archivegen/mocinclude.opt
+tools/binarycreator/mocinclude.opt
+tools/devtool/mocinclude.opt
+tools/repocompare/mocinclude.opt
+tools/repogen/mocinclude.opt
+
+# Only include the libs we care about
+vendors/pdm-proto/*/libs/Windows/x64
+vendors/pdm-proto/*/libs/Windows/x32/MD
+vendors/protobuf/*/lib/*
+!vendors/protobuf/*/lib/libprotobuf.lib
