Add option to define operations in component.xml
Operations can from now on be declared also in component.xml. The
operations are performed, backuped and rollbacked the same way as they
would be when defined from scripting api.

Task-number: QTIFW-507
Change-Id: Ia509219b94737136c3de25db0cb0c72076b48380
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/doc/examples/package.xml
+++ b/doc/examples/package.xml
@@ -28,4 +28,17 @@
     <ForcedInstallation>false</ForcedInstallation>
     <Essential>false</Essential>
     <Replaces>com.vendor.root.component2old</Replaces>
+    <Operations>
+        <Operation name="AppendFile">
+            <Argument>@TargetDir@/A.txt</Argument>
+            <Argument>lorem ipsum</Argument>
+        </Operation>
+        <Operation name="Extract">
+            <Argument>@TargetDir@/Folder1</Argument>
+            <Argument>content.7z</Argument>
+        </Operation>
+        <Operation name="Extract">
+            <Argument>@TargetDir@/Folder2</Argument>
+        </Operation>
+    </Operations>
 </Package>
