Introduce ForcedUpdate element for component
Setting ForcedUpdate for component will cause a mandatory update for
component if it is installed. Component must be updated before any other
component can be updated/installed/removed. Essential components are updated
at the same time with ForcedUpdate.

Task-number: QTIFW-1565
Change-Id: I6af07fba222371e8cd161d1fec65301450077d86
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/doc/examples/package.xml
+++ b/doc/examples/package.xml
@@ -26,6 +26,7 @@
     <UpdateText>This changed compared to the last release</UpdateText>
     <Default>false</Default>
     <ForcedInstallation>false</ForcedInstallation>
+    <ForcedUpdate>false</ForcedUpdate>
     <Essential>false</Essential>
     <Replaces>com.vendor.root.component2old</Replaces>
     <Operations>
