Add installer generation to make_instructions.yaml
Change-Id: Ief0885c94e7497de834e6f6de14bd485244e8ab0
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/instructions/common_environment.yaml
+++ b/coin/instructions/common_environment.yaml
@@ -62,3 +62,8 @@ instructions:
       condition: property
       property: host.os
       equals_value: Linux
+  - type: Group
+    instructions:
+      - type: EnvironmentVariable
+        variableName: PACKAGING_KEYS_CONFIG_URL
+        variableValue: "http://ci-files01-hki.intra.qt.io/input/semisecure/packaging/packaging_secure.ini"
