--- a/coin/instructions/make_instructions.yaml
+++ b/coin/instructions/make_instructions.yaml
@@ -81,10 +81,88 @@ instructions:
       property: target.compiler
       in_values: [MSVC2013, MSVC2015, MSVC2017, MSVC2019]
 
+  - type: Group
+    instructions:
+      - type: ChangeDirectory
+        directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
+      - type: ExecuteCommand
+        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}} --target-name QtInstallerFramework-linux-x64-4.1.0.run"
+        maxTimeInSeconds: 36000
+        maxTimeBetweenOutput: 3600
+        userMessageOnFailure: "Failed to create ifw installer."
+      - type: Rename
+        sourcePath: "{{.SourceDir}}/QtInstallerFramework-linux-x64-4.1.0.run"
+        targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-linux-x64-4.1.0.run"
+        userMessageOnFailure: "Failed to copy installer."
+    enable_if:
+      condition: and
+      conditions:
+        - condition: property
+          property: host.os
+          equals_value: Linux
+
+  - type: Group
+    instructions:
+      - type: ChangeDirectory
+        directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
+      - type: ExecuteCommand
+        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}} --target-name QtInstallerFramework-macOS-x86_64-4.1.0.app"
+        maxTimeInSeconds: 36000
+        maxTimeBetweenOutput: 3600
+        userMessageOnFailure: "Failed to create ifw installer."
+      - type: EnvironmentVariable
+        variableName: QT_CODESIGN_IDENTITY_KEY
+        variableValue: "A5GTH44LYL"
+      - type: ExecuteCommand
+        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/sign_installer.py mac --file={{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.app"
+        maxTimeInSeconds: 36000
+        maxTimeBetweenOutput: 3600
+        userMessageOnFailure: "Failed to sign the ifw installer"
+      - type: ExecuteCommand
+        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/notarize.py --dmg={{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
+        maxTimeInSeconds: 36000
+        maxTimeBetweenOutput: 3600
+        userMessageOnFailure: "Failed to notarize the ifw installer"
+      - type: Rename
+        sourcePath: "{{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
+        targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
+        userMessageOnFailure: "Failed to copy installer."
+    enable_if:
+      condition: and
+      conditions:
+        - condition: property
+          property: host.os
+          equals_value: MacOS
+
+  - type: Group
+    instructions:
+      - type: ChangeDirectory
+        directory: "{{.SourceDir}}"
+      - type: ExecuteCommand
+        command: "{{.Env.PYTHON3_PATH}}\\python {{.SourceDir}}\\coin\\create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir C:\\{{.SourceDir}} --target-name QtInstallerFramework-windows-x86-4.1.0"
+        maxTimeInSeconds: 1200
+        maxTimeBetweenOutput: 1200
+        userMessageOnFailure: "Failed to create ifw installer."
+    enable_if:
+      condition: and
+      conditions:
+        - condition: property
+          property: host.os
+          equals_value: Windows
+
   - type: SignPackage
-    directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
+    directory: "{{.SourceDir}}"
     maxTimeInSeconds: 1200
     maxTimeBetweenOutput: 1200
+    enable_if:
+      condition: property
+      property: host.os
+      equals_value: Windows
+
+  - type: Rename
+    sourcePath: "{{.SourceDir}}/QtInstallerFramework-windows-x86-4.1.0.exe"
+    targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-windows-x86-4.1.0.exe"
+    userMessageOnFailure: "Failed to copy installer."
     enable_if:
       condition: property
       property: host.os
