Fix test running
Apparently it is not enough to unset the MAKEFLAGS for jom.
It still was running test in parallel and trying to write
results to same file.

Change-Id: Id0c968dde4c2d005e71a1895e3d2190e8685f3ec
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/coin/instructions/make_check_instructions.yaml
+++ b/coin/instructions/make_check_instructions.yaml
@@ -103,7 +103,7 @@ instructions:
       - type: RunQtUnitTest
         testRepetitionAllowance: 3
         directory: "{{.SourceDir}}/tests/auto"
-        runTestCommand: ["jom", "check"]
+        runTestCommand: ["jom", "check", "-j1"]
         maxTimeInSeconds: 3600
         maxTimeBetweenOutput: 600
         userMessageOnFailure: "Failed to run make check, check logs."
