Sign only generated IFW installer
IFW binaries cannot be signed as then the end executable is signed
making it impossible for users to sign their own installers with their
own keys.
This change also exports IFW tools, examples and docs for online
repository usage.

Change-Id: I5094c50ea804854ba619216b03f6dc25ebedee57
Reviewed-by: Iikka Eklund <iikka.eklund@qt.io>

--- a/coin/qt-installer-package-config.json
+++ b/coin/qt-installer-package-config.json
@@ -2,7 +2,8 @@
     "version": "1",
     "module-split": {
         "__extract__": [
-            "**/*QtInstallerFramework-*"
+            "**/*QtInstallerFramework-*",
+            "**/*ifw_data*"
         ]
     }
 }
