--- a/coin/instructions/make_instructions.yaml
+++ b/coin/instructions/make_instructions.yaml
@@ -86,12 +86,12 @@ instructions:
       - type: ChangeDirectory
         directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
       - type: ExecuteCommand
-        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}} --target-name QtInstallerFramework-linux-x64-4.1.0.run"
+        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}}/IfwInstaller --target-name QtInstallerFramework-linux-x64-4.1.0.run"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to create ifw installer."
       - type: Rename
-        sourcePath: "{{.SourceDir}}/QtInstallerFramework-linux-x64-4.1.0.run"
+        sourcePath: "{{.SourceDir}}/IfwInstaller/QtInstallerFramework-linux-x64-4.1.0.run"
         targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-linux-x64-4.1.0.run"
         userMessageOnFailure: "Failed to copy installer."
     enable_if:
@@ -106,7 +106,7 @@ instructions:
       - type: ChangeDirectory
         directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
       - type: ExecuteCommand
-        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}} --target-name QtInstallerFramework-macOS-x86_64-4.1.0.app"
+        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}}/IfwInstaller --target-name QtInstallerFramework-macOS-x86_64-4.1.0.app"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to create ifw installer."
@@ -114,17 +114,17 @@ instructions:
         variableName: QT_CODESIGN_IDENTITY_KEY
         variableValue: "A5GTH44LYL"
       - type: ExecuteCommand
-        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/sign_installer.py mac --file={{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.app"
+        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/sign_installer.py mac --file={{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x86_64-4.1.0.app"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to sign the ifw installer"
       - type: ExecuteCommand
-        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/notarize.py --dmg={{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
+        command: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools/notarize.py --dmg={{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to notarize the ifw installer"
       - type: Rename
-        sourcePath: "{{.SourceDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
+        sourcePath: "{{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
         targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-macOS-x86_64-4.1.0.dmg"
         userMessageOnFailure: "Failed to copy installer."
     enable_if:
@@ -139,7 +139,7 @@ instructions:
       - type: ChangeDirectory
         directory: "{{.SourceDir}}"
       - type: ExecuteCommand
-        command: "{{.Env.PYTHON3_PATH}}\\python {{.SourceDir}}\\coin\\create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir C:\\{{.SourceDir}} --target-name QtInstallerFramework-windows-x86-4.1.0"
+        command: "{{.Env.PYTHON3_PATH}}\\python {{.SourceDir}}\\coin\\create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir C:\\{{.SourceDir}}\\IfwInstaller  --target-name QtInstallerFramework-windows-x86-4.1.0"
         maxTimeInSeconds: 1200
         maxTimeBetweenOutput: 1200
         userMessageOnFailure: "Failed to create ifw installer."
@@ -151,7 +151,7 @@ instructions:
           equals_value: Windows
 
   - type: SignPackage
-    directory: "{{.SourceDir}}"
+    directory: "{{.SourceDir}}/IfwInstaller"
     maxTimeInSeconds: 1200
     maxTimeBetweenOutput: 1200
     enable_if:
@@ -160,13 +160,18 @@ instructions:
       equals_value: Windows
 
   - type: Rename
-    sourcePath: "{{.SourceDir}}/QtInstallerFramework-windows-x86-4.1.0.exe"
+    sourcePath: "{{.SourceDir}}/IfwInstaller/QtInstallerFramework-windows-x86-4.1.0.exe"
     targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-windows-x86-4.1.0.exe"
     userMessageOnFailure: "Failed to copy installer."
     enable_if:
       condition: property
       property: host.os
       equals_value: Windows
+
+  - type: Rename
+    sourcePath: "{{.SourceDir}}/dist/packages/org.qtproject.ifw.binaries/data/data.7z"
+    targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/ifw_data.7z"
+    userMessageOnFailure: "Failed to copy IFW binary archive."
 
   - type: UploadArtifact
     archiveDirectory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
