Remove wayland dependency from Linux binaries
Wayland dependency is added to installer binaries if it is found from
system at build time. Added explicit dependencies only to xcb and
minimal platform plugins.

Task-number: QTIFW-2067
Change-Id: I0b65ef10824122c7041f1aa566d7a989aa085503
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/instructions/qmake_module_build.yaml
+++ b/coin/instructions/qmake_module_build.yaml
@@ -33,9 +33,23 @@ instructions:
     directory: "{{.BuildDir}}"
 
   - type: ExecuteCommand
+    command: ["{{.InstallDir}}/bin/qmake", "QTPLUGIN.platforms = qminimal qxcb", "INSTALL_PREFIX={{.InstallDir}}", "{{.SourceDir}}"]
+    maxTimeInSeconds: 1800
+    maxTimeBetweenOutput: 600
+    userMessageOnFailure: "Failed to run qmake, check logs."
+    enable_if:
+      condition: property
+      property: host.os
+      equals_value: Linux
+
+  - type: ExecuteCommand
     command: ["{{.InstallDir}}/bin/qmake", "INSTALL_PREFIX={{.InstallDir}}", "{{.SourceDir}}"]
     maxTimeInSeconds: 1800
     maxTimeBetweenOutput: 600
     userMessageOnFailure: "Failed to run qmake, check logs."
+    enable_if:
+      condition: property
+      property: host.os
+      not_equals_value: Linux
   - !include "{{installer-framework/installer-framework}}/make_instructions.yaml"
   - !include "{{installer-framework/installer-framework}}/make_documentation.yaml"
