Patch the windows documentation build
While we can't build qdoc within static build, we have to extract it
separately to be able to use it.

Change-Id: Ifa97edd9cc197cdc7f765e2323f1149cb29e9990
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/coin/instructions/make_instructions.yaml
+++ b/coin/instructions/make_instructions.yaml
@@ -61,16 +61,7 @@ instructions:
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to run jom/make, check logs."
-      - type: ExecuteCommand
-        command: ['jom', 'html_docs']
-        maxTimeInSeconds: 36000
-        maxTimeBetweenOutput: 3600
-        userMessageOnFailure: 'Could not build documentation.'
-      - type: UploadArtifact
-        archiveDirectory: '{{.BuildDir}}\\doc'
-        transferType: UploadModuleDocumentation
-        maxTimeInSeconds: 1800
-        maxTimeBetweenOutput: 1800
+      - !include "{{installer-framework/installer-framework}}/make_win_docs_instructions.yaml"
       - type: ExecuteCommand
         command: "nmake install INSTALL_ROOT={{.InstallRoot}}"
         maxTimeInSeconds: 1800
