EO-17462  - Updating PDM from 1.1.12 to 2.0.2  -  Added version.txt  - Removed the version number from the folder name, to simplify updating PDM in future  - Updated protos  - Version set as v1.13.0

--- a/.gitignore
+++ b/.gitignore
@@ -106,11 +106,11 @@ tools/repocompare/mocinclude.opt
 tools/repogen/mocinclude.opt
 
 # Only include the libs we care about
-vendors/pdm-proto/*/libs/Windows/x64
-vendors/pdm-proto/*/libs/Windows/x32/MD
-vendors/pdm-proto/*/libs/Windows/x32/MT/libprotobuf.lib
-vendors/protobuf/*/lib/*
-!vendors/protobuf/*/lib/libprotobuf.lib
+vendors/pdm-proto/libs/Windows/x64
+vendors/pdm-proto/libs/Windows/x32/MD
+vendors/pdm-proto/libs/Windows/x32/MT/libprotobuf.lib
+vendors/protobuf/lib/*
+!vendors/protobuf/lib/libprotobuf.lib
 
 # Include the eve_installer_crashmon.exe
 !src/libs/installer/resources/eve_installer_crashmon.exe
