Libarchive: use libiconv installed with macOS
Update build instructions for Coin.

Also update docs to remove mention of the extra step of installing
additional version of the library, as this is not necessary.

Change-Id: I71fb346af30325b1bfeed788e9fec832f344b382
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/coin/instructions/common_environment.yaml
+++ b/coin/instructions/common_environment.yaml
@@ -58,17 +58,9 @@ instructions:
       property: host.os
       equals_value: MacOS
 
-  - type: EnvironmentVariable
-    variableName: IFW_ICONV_LIBRARY
-    variableValue: "/usr/local/opt/libiconv/lib/libiconv.a"
-    enable_if:
-      condition: property
-      property: host.os
-      equals_value: MacOS
-
   - type: PrependToEnvironmentVariable
     variableName: C_INCLUDE_PATH
-    variableValue: "/usr/local/opt/xz/include:/usr/local/opt/libiconv/include:"
+    variableValue: "/usr/local/opt/xz/include:"
     enable_if:
       condition: property
       property: host.os
@@ -76,7 +68,7 @@ instructions:
 
   - type: PrependToEnvironmentVariable
     variableName: CPLUS_INCLUDE_PATH
-    variableValue: "/usr/local/opt/xz/include:/usr/local/opt/libiconv/include:"
+    variableValue: "/usr/local/opt/xz/include:"
     enable_if:
       condition: property
       property: host.os
