COIN: Build IFW with 64bit MSVC2019
Task-number: QTIFW-2544
Change-Id: I0db216634bb15fae352f4fc2a1118e32a47e712f
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/instructions/common_environment.yaml
+++ b/coin/instructions/common_environment.yaml
@@ -76,7 +76,7 @@ instructions:
 
   - type: PrependToEnvironmentVariable
     variableName: INCLUDE
-    variableValue: "C:\\Utils\\bzip2-1.0.8;C:\\Utils\\zlib-1.2.12;C:\\Utils\\xz-5.2.5\\src\\liblzma\\api;"
+    variableValue: "C:\\Utils\\bzip2-1.0.8-x64;C:\\Utils\\zlib-1.2.12-x64;C:\\Utils\\xz-5.2.5-x64\\src\\liblzma\\api;"
     enable_if:
       condition: property
       property: host.os
@@ -84,11 +84,11 @@ instructions:
 
   - type: PrependToEnvironmentVariable
     variableName: LIB
-    variableValue: "C:\\Utils\\bzip2-1.0.8;C:\\Utils\\zlib-1.2.12;C:\\Utils\\xz-5.2.5\\windows\\vs2015\\ReleaseMT\\Win32\\liblzma;"
+    variableValue: "C:\\Utils\\bzip2-1.0.8-x64;C:\\Utils\\zlib-1.2.12-x64;C:\\Utils\\xz-5.2.5-x64\\windows\\vs2019\\ReleaseMT\\x64\\liblzma;"
     enable_if:
       condition: property
       property: target.compiler
-      equals_value: MSVC2015
+      equals_value: MSVC2019
 
   - type: Group
     instructions:
