Use altool for notarizing 4.5.1 release content
Use qtsdk commit ref pointing to change before refactor to notarize.py.
We use older macOS version, not supported by notarytool, for building
the release content.

Change-Id: Ie72248993341d3521b90add477338df592ef1306
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/instructions/qmake_module_build.yaml
+++ b/coin/instructions/qmake_module_build.yaml
@@ -9,7 +9,7 @@ instructions:
         maxTimeInSeconds: 600
         maxTimeBetweenOutput: 600
         project: qtsdk/qtsdk
-        ref: master
+        ref: 8d9c6bb366b0f3c1e46c045a6453776ae98a8051
         directory: qtsdk/qtsdk
         userMessageOnFailure: "Could not install qtsdk/qtsdk source archive. Please investigate why."
 
