--- a/coin/instructions/qmake_module_build.yaml
+++ b/coin/instructions/qmake_module_build.yaml
@@ -12,6 +12,13 @@ instructions:
         ref: 8d9c6bb366b0f3c1e46c045a6453776ae98a8051
         directory: qtsdk/qtsdk
         userMessageOnFailure: "Could not install qtsdk/qtsdk source archive. Please investigate why."
+      - type: InstallSourceArchive
+        maxTimeInSeconds: 600
+        maxTimeBetweenOutput: 600
+        project: qtsdk/tqtc-qtsdk
+        ref: master
+        directory: qtsdk/tqtc-qtsdk
+        userMessageOnFailure: "Could not install qtsdk/tqtc-qtsdk source archive. Please investigate why."
 
   - type: SetBuildDirectory
     directory: "{{.SourceDir}}"
