--- a/coin/instructions/make_instructions.yaml
+++ b/coin/instructions/make_instructions.yaml
@@ -108,15 +108,18 @@ instructions:
         maxTimeInSeconds: 1800
         maxTimeBetweenOutput: 600
         userMessageOnFailure: "pkg_bootstrap.py failed"
+      - type: EnvironmentVariable
+        variableName: PKG_NODE_ROOT
+        variableValue: "{{.AgentWorkingDir}}/qtsdk"
       - type: ChangeDirectory
-        directory: "{{.AgentWorkingDir}}/qtsdk/qtsdk/packaging-tools"
+        directory: "{{.AgentWorkingDir}}/qtsdk/tqtc-qtsdk/packaging_tools"
       - type: ExecuteCommand
         command: "python3 -m pipenv run python sign_installer.py mac --file={{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x64-4.7.0.app"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to sign the ifw installer"
       - type: ExecuteCommand
-        command: "python3 -m pipenv run python notarize.py --dmg={{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x64-4.7.0.dmg"
+        command: "python3 -m pipenv run python notarize.py --path={{.SourceDir}}/IfwInstaller/QtInstallerFramework-macOS-x64-4.7.0.dmg"
         maxTimeInSeconds: 36000
         maxTimeBetweenOutput: 3600
         userMessageOnFailure: "Failed to notarize the ifw installer"
