Start using Qt 6.5 branch with IFW
This also blacklist test function loadComponentUserInterfaces

Task-number: COIN-1050
Task-number: QTIFW-3087
Change-Id: I7c59570b07a54b50898ef0c1bf23ff83540f36bd
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/dependencies.yaml
+++ b/coin/dependencies.yaml
@@ -1,7 +1,7 @@
 
 product_dependency:
   ../../qt/qt5:
-    ref: "ifw-5.15.2"
+    ref: "6.5"
 dependency_source: supermodule
 dependencies: [
       "../../qt/qtbase",
@@ -9,5 +9,5 @@ dependencies: [
       "../../qt/qtdeclarative",
       "../../qt/qttools",
       "../../qt/qttranslations",
-      "../../qt/qtwinextras"
+      "../../qt/qt5compat"
       ]
