Reintroduce custom documentation build targets
Documentation build targets have been removed from Qt 6 when building
with qmake. Reintroduce custom targets to call qdoc, qhelpgenerator,
and qtattributionsscanner via 'html_docs' and 'docs' targets.

These are adapted from similar targets once used by Qt Creator.

Change-Id: If572b709c56860a9949c1f4a5ae66a660e2a621e
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/coin/instructions/make_win_docs_instructions.yaml
+++ b/coin/instructions/make_win_docs_instructions.yaml
@@ -3,7 +3,7 @@ instructions:
   - type: Group
     instructions:
       - type: ChangeDirectory
-        directory: "{{.SourceDir}}\\doc"
+        directory: "{{.SourceDir}}"
         maxTimeInSeconds: 300
         maxTimeBetweenOutput: 120
         userMessageOnFailure: "Failed to change dir"
