Change dependency branch for Qt to tqtc/6.6
Change-Id: I132d075cdeb9440b41890434105527297825bfad
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/coin/dependencies.yaml
+++ b/coin/dependencies.yaml
@@ -1,7 +1,7 @@
 
 product_dependency:
-  ../../qt/qt5:
-    ref: "6.5"
+  ../../qt/tqtc-qt5:
+    ref: "tqtc/6.6"
 dependency_source: supermodule
 dependencies: [
       "../../qt/qtbase",
