--- a/coin/dependencies.yaml
+++ b/coin/dependencies.yaml
@@ -1,13 +1,22 @@
-
-product_dependency:
-  ../../qt/tqtc-qt5:
-    ref: "tqtc/6.6"
-dependency_source: supermodule
-dependencies: [
-      "../../qt/qtbase",
-      "../../qt/qtsvg",
-      "../../qt/qtdeclarative",
-      "../../qt/qttools",
-      "../../qt/qttranslations",
-      "../../qt/qt5compat"
-      ]
+dependencies:
+    ../../qt/qtbase.git:
+        ref: "33f5e985e480283bb0ca9dea5f82643e825ba87c"
+        required: true
+    ../../qt/qtsvg.git:
+        ref: "da7e04eaa56c54d5486e39d2e0bd0ddb2a62b74b"
+        required: true
+    ../../qt/qtdeclarative.git:
+        ref: "e559d5cf2b66c4a973f83f173d57676a21d287ef"
+        required: true
+    ../../qt/qttools.git:
+        ref: "d7c950e5cfcda823544d3a0092a2bf435015f94d"
+        required: true
+    ../../qt/qttranslations.git:
+        ref: "94e46555acd71eb7d14dc340b623c13876101c00"
+        required: true
+    ../../qt/qt5compat.git:
+        ref: "e1fe0c83bc547ba34142c2ab06fdfea0bced7308"
+        required: true
+#     ssh://git.qt.io/coin-additional-projects/squish:
+#         ref: "6f6de132dc6983f82f32d3eba880b3099bb480c4"
+#        required: true
