--- a/coin/instructions/make_instructions.yaml
+++ b/coin/instructions/make_instructions.yaml
@@ -91,6 +91,32 @@ instructions:
         - condition: property
           property: host.os
           equals_value: Linux
+        - condition: property
+          property: target.arch
+          equals_value: X86_64
+
+  - type: Group
+    instructions:
+      - type: ChangeDirectory
+        directory: "{{.InstallRoot}}/{{.AgentWorkingDir}}"
+      - type: ExecuteCommand
+        command: "python3 {{.SourceDir}}/coin/create_ifw_installer.py --src-dir {{.SourceDir}} --bld-dir {{.SourceDir}} --target-dir {{.SourceDir}}/IfwInstaller --target-name QtInstallerFramework-linux-aarch64-4.7.0-alpha.run"
+        maxTimeInSeconds: 36000
+        maxTimeBetweenOutput: 3600
+        userMessageOnFailure: "Failed to create ifw installer."
+      - type: Rename
+        sourcePath: "{{.SourceDir}}/IfwInstaller/QtInstallerFramework-linux-aarch64-4.7.0-alpha.run"
+        targetPath: "{{.InstallRoot}}/{{.AgentWorkingDir}}/QtInstallerFramework-linux-aarch64-4.7.0-alpha.run"
+        userMessageOnFailure: "Failed to copy installer."
+    enable_if:
+      condition: and
+      conditions:
+        - condition: property
+          property: host.os
+          equals_value: Linux
+        - condition: property
+          property: target.arch
+          equals_value: AARCH64
 
   - type: Group
     instructions:
